samples/_failures_safe/1761412635_d2da1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5436fc6.c: In function ‘main’:
./samples/SAFE/__tmp_b5436fc6.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
